force-app/main/default/objects/Interview_Summary__c/Interview_Summary__c.object-meta.xml
<CustomObject>
    <label>Interview Summary</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Interview Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>