force-app/main/default/objects/Interview_Summary__c/fields/High_Potential__c.field-meta.xml
<CustomField>
    <fullName>High_Potential__c</fullName>
    <label>High Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low potential</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>High Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>