force-app/main/default/objects/Interview_Summary__c/fields/Interviewee__c.field-meta.xml
<CustomField>
    <fullName>Interviewee__c</fullName>
    <label>Interviewee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interview Summaries</relationshipLabel>
    <relationshipName>Interview_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>