force-app/main/default/objects/Interview_Summary__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Junior low</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Junior strong</fullName>
            </value>
            <value>
                <fullName>Intermediate low</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Intermediate strong</fullName>
            </value>
            <value>
                <fullName>Senior low</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Senior strong</fullName>
            </value>
            <value>
                <fullName>Leader low</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>