force-app/main/default/objects/Interview_Summary__c/fields/Potentially_Hire__c.field-meta.xml
<CustomField>
    <fullName>Potentially_Hire__c</fullName>
    <label>Potentially Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Not hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>