force-app/main/default/objects/Interview_Summary__c/fields/Summary_of_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Qualification__c</fullName>
    <label>Summary of Qualification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>