force-app/main/default/objects/Interview_Summary__c/fields/Technical_English__c.field-meta.xml
<CustomField>
    <fullName>Technical_English__c</fullName>
    <label>Technical English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Pre-intermediate</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Upper-intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>